<resources>
    <string name="app_name">Bookaam</string>
    <string name="book_tickets">BOOK TICKETS</string>
    <string name="my_tickets">MY TICKETS</string>
    <string name="history">HISTORY</string>
    <string name="reviews">Reviews</string>
    <string name="contact_feedback"><![CDATA[CONTACT & FEEDBACK]]></string>
    <string name="share">Share</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="refund_policy">REFUND POLICY</string>
    <string name="log_out">LOG OUT</string>
    <string name="book_your_bus">BOOK YOUR BUS</string>
    <string name="book_now">BOOK NOW</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messaging">MESSAGING</string>
    <string name="location">LOCATION</string>
    <string name="information">INFORMATION</string>
    <string name="confirm">CONFIRM</string>
    <string name="agency">Agency</string>
    <string name="fcfa">FCFA</string>
    <string name="select_agency_from_the_list">select agency from the list</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="id_card_number_optional">Id card number (optional)</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="departure_date">Departure date</string>
    <string name="travel_route">Travel route</string>
    <string name="identification">Identification</string>
    <string name="travel_agency">Travel Agency</string>
    <string name="ticket_price">Ticket price</string>
    <string name="platform_charge">Platform charge</string>
    <string name="book_this_trip">Book this trip</string>
    <string name="pay_platform_charge">Pay platform charge</string>
    <string name="fetching_agencies_available">Fetching agencies available</string>
    <string name="fetching_routes_available">Fetching routes available</string>
    <string name="please_wait">Please wait…</string>
    <string name="select_route">Select route</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="trip_booked">Trip booked</string>
    <string name="postpone_your_ticket">Postpone your ticket</string>
    <string name="reactivate_your_ticket">Reactivate your ticket</string>
    <string name="travel_time">Travel time</string>
    <string name="select_time_and_day">Select time and day</string>
    <string name="payment_info">Payment info</string>
    <string name="momo_number">Momo number</string>
    <string name="warning">Warning</string>
    <string name="warning_text">Are you sure you want to postpone your ticket!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_your_account">Create your account</string>
    <string name="or">OR</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_google">Sign in with google</string>

    <string-array name="days_array">
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="disclaimer_text">
        Tickets booked are non refundable. The agency is not responsible for lateness that may result in failure to board a bus once you pay for your ticket.\n<b>NB:</b> You shall only be allowed to board a bus when your ticket is validated by the agency.\n
        You can only postpone your ticket for not more than 1 day.</string>
    <string name="review_app">Review app</string>
    <string name="book_a_classic_bus">BOOK A CLASSIC BUS</string>
    <string name="book_a_vip_bus">BOOK A VIP BUS</string>
    <string name="saving">Saving</string>
    <string name="i_accept">I AGREE</string>
    <string name="i_decline">DECLINE</string>
    <string name="no_ticket">no ticket</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="no_route_selected">No route selected</string>
    <string name="code">Code</string>
    <string name="email">Email</string>
    <string name="already_signed_up_log_in">Already signed up log in</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="please_fill_in_your_name">Please fill in your name</string>
    <string name="please_fill_in_your_number">Please fill in your number</string>
    <string name="password_too_short">Password too short</string>
    <string name="proceed">PROCEED</string>
    <string name="connection_warning">There is no active internet connection on your device.\nDo you want to proceed without logging in</string>
    <string name="no_travel_history">No Travel History</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="resetting_password">Resetting password</string>
    <string name="reset_message">Password reset instructions have been sent to your email.  Check your email to proceed.</string>
    <string name="about_app_text">Bookaam™ is a closed source Android (for now) bus booking mobile application that runs on android devices from Android version 4.0. It enables bus agencies to sell bus tickets online via mobile money and also enable clients to view available agencies, available travel routes, departure dates and time for various agencies, choose available bus options (classic or VIP) and to by tickets from their mobile devices.\nBookaam has:\n><i>Fast and easy booking method;</i>
        \n><i>Reliable and secure payment method;</i>
        \n><i>Tracking of your travel records</i>
    </string>
    <string name="app_name_text">App name:</string>
    <string name="website">Website:</string>
    <string name="www_bookaam_com">bookaam.com</string>
    <string name="version">Version:</string>
    <string name="_1_00">1.00</string>
    <string name="developers">Developers:</string>
    <string name="omenacle_technology">Omenacle Dev\'s</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="require_internet">No internet connection. Please turn on mobile data</string>
    <string name="text_to_share">Check out Bookaam, I use it to book my ticket at any agency from home. Get it for free at https://www.bookaam.com/</string>
    <string name="send_to">Send to</string>

    <string name="start">GOT IT</string>

    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="slide_desc_home">Press on book your bus button and select the type of ticket Classic(Normal) or Vip.</string>
    <string name="slide_desc_agency">Scroll through the list of agencies displayed and select an agency</string>
    <string name="slide_desc_info">Fill in your personal information in the fields provided and press on submit.</string>
    <string name="slide_desc_confirm">Verify the information displayed and make sure they are correct then press on the book this trip button</string>
    <string name="how_to_book">How to Book</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_desc">Take time to learn how to book your ticket from home</string>
    <string name="no_idcard">No id card</string>
    <string name="momonumber_error">Please enter momo number</string>
    <string name="incomplete_ticket">You have not completed payment for your classic travel ticket.Please follow the process and pay for your transport fare.</string>
    <string name="trans_dialog">Platform charge payment completed.\nClick continue to pay your transport fare </string>
    <string name="completed">Completed</string>
    <string name="completed_text">Payment completed. go back and check your ticket under my tickets</string>
    <string name="postpone_info">Please SMS us your ticket\ntype[VIP or CLASSIC]\ncode[example:456789831]\nName\nto this number: 672084140 if you wish to postpone your ticket </string>
    <string name="info" translatable="false">Info</string>
    <string name="continu">CONTINUE</string>
    <string name="no_route">No route selected\ngo back and select your travel route</string>
    <string name="select_your_location">Select your location</string>
    <string name="enter_info">Enter information</string>
    <string name="confirm_pay">Confirm and pay</string>
    <string name="reg_user">Registering user…</string>
    <string name="log_user">Login in please wait…</string>
    <string name="log_failed">Login failed</string>
    <string name="signup_failed">Failed to sign up</string>
    <string name="incomplete_vip_ticket">You have not completed payment for your vip travel ticket.Please follow the process and pay for your transport fare.</string>
    <string name="available_seats">Available seats</string>
    <string name="no_seat">No available seat for this route</string>
    <string name="contact_us">Contact us</string>
    <string name="call_us_on_237_672_084_140">Call us on: +237 672 084 140</string>
    <string name="email_us_support_bookaam_com">Email us: support@bookaam.com</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="empty_message">Please enter a message</string>
</resources>
