<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group
        android:id="@+id/top_nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/bus_icon"
            android:title="@string/book_a_classic_bus"/>
        <item
            android:id="@+id/nav_vip"
            android:title="@string/book_a_vip_bus"
            android:icon="@drawable/bus_icon"/>

        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ticket_icon"
            android:title="@string/my_tickets" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="@string/history"/>


    </group>
    <group
        android:checkableBehavior="none"
        android:id="@+id/middle_nav_group">
        <item
            android:id="@+id/nav_review"
            android:title="@string/review_app" />

        <item
            android:id="@+id/nav_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_faq"
            android:title="@string/faq" />
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/bottom_nav_group">
        <item
            android:id="@+id/nav_policy"
            android:title="@string/refund_policy" />
        <item
            android:id="@+id/nav_disclaimer"
            android:title="@string/disclaimer" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out" />
    </group>
</menu>