<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:fontFamily="@font/berlin_sans_fb_regular"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_fb_bk"
        android:text="@string/book_a_classic_bus"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:id="@+id/classic_btn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_google_bk"
        android:text="@string/book_a_vip_bus"
        android:textColor="@color/white"
        android:id="@+id/vip_btn"/>

</LinearLayout>
