<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:fontFamily="@font/berlin_sans_fb_regular"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="8dp"
                            android:text="@string/app_name_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/app_name"
                            android:text="@string/app_name"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="17sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="8dp"
                            android:text="@string/website"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/website"
                            android:text="@string/www_bookaam_com"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="17sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="8dp"
                            android:text="@string/version"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/version"
                            android:text="@string/_1_00"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="17sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/developers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="8dp"
                            android:text="@string/developers"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/developers"
                            android:text="@string/omenacle_technology"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="17sp" />
                    </RelativeLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.4"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:text="@string/about_app_text"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>