<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:src="@drawable/bookaaam"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time_and_day"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_time"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryText"
        android:paddingBottom="4dp"
        android:layout_marginTop="4dp"/>
    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departure_date"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryText"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>
    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/btn_primary_bk"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:id="@+id/btn_submit"
        android:textAllCaps="false"
        />
</LinearLayout>
