<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    tools:context=".BookingFragment.UserInfoFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passenger_name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="22sp"
            app:fontFamily="@font/berlin_sans_fb_regular"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:hintAnimationEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passenger_number"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/colorAccent"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:textSize="18sp"
            app:fontFamily="@font/berlin_sans_fb_regular"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:hintAnimationEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passenger_id"
            android:hint="@string/id_card_number_optional"
            android:inputType="number"
            android:textColorHint="@color/colorAccent"
            android:imeActionLabel="@string/submit"
            android:imeOptions="actionNext"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="18sp"
            app:fontFamily="@font/berlin_sans_fb_regular"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/btn_primary_bk"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:textAllCaps="false"
        app:elevation="4dp"
        android:id="@+id/btnSubmit"
        app:fontFamily="@font/berlin_sans_fb_regular"
        />
    </LinearLayout>
    
</ScrollView>
